fix linebreak in views with subdata textfields based on https://darwin.telekom.de/darwin/auth/base/workflow/ById/15112628470001
git-svn-id: file:///opt/w5base-svn-repo/HEAD@10638 0dab0bae-74ca-4a1c-8b4a-1454ec714b61

--- a/skin/default/base/css/default.css
+++ b/skin/default/base/css/default.css
@@ -241,6 +241,7 @@ div.sublink,span.sublink  {
             color:#16305e;
             cursor: pointer;
             cursor: hand;
+            white-space:nowrap;
           }
 
 a:link.emaillink    {
